fix bug webcame toggle and handtrack area, include on mobile view

--- a/style.css
+++ b/style.css
@@ -836,44 +836,52 @@ body.view-control-buttons .viewControlButton {
   height: 240px;
   width: 320px;
   top: 40px;
-  right:0;
-  box-shadow: -5px 5px 10px rgb(57, 64, 72);
+  right: 0;
+  box-shadow: -3px 3px 10px rgb(57, 64, 72);
   background-color: rgba(103,115,131,0.8);
   z-index: 1;
+}
+
+/* Fixed: Mobile View */
+.mobile #handtrackjs-area {
+  top: 50px;
 }
 
 #webCamToggle {
   display: block;
   position: absolute;
   top: 0;
-  right: 45px;
-  width: 45px;
+  right: 0;
+  width: 40px;
   height: 40px;
   padding: 5px;
   background-color: rgb(103,115,131);
   background-color: rgba(103,115,131,0.8);
 }
 
-/* Unidentified yet */
-.mobile #autorotateWebCamToggle {
+/* Fixed */
+.mobile #webCamToggle {
   width: 50px;
   height: 50px;
 }
 
 /* If there is a fullscreen button, autorotate must placed a bit to the left */
 body.fullscreen-enabled #webCamToggle {
-  right: 90px;
+  right: 80px;
 }
 
 body.fullscreen-enabled.mobile #webCamToggle {
-  right: 90px;
+  right: 100px;
 }
 
 #webCamToggle .icon {
+  /* position: absolute; */
   top: 5px;
   right: 5px;
   width: 100%;
   height: 100%;
+  /* width: 30px; */
+  /* height: 30px; */
 }
 
 .mobile #webCamToggle .icon {
